fix overflow-x santaclock

--- a/src/public/css/SantaClock.css
+++ b/src/public/css/SantaClock.css
@@ -669,7 +669,8 @@ body {
     background-color: #5ac05b;
     color: #E9E9E9;
     font-family: Montserrat, sans-serif;
-    margin: 0px
+    margin: 0px;
+    overflow-x: hidden;
 }
 
 input {
